# signet-eval

./: .gitattributes  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  component_map.yaml  constraints.yaml  design.md  prompt.md  sops.md  task.md
.constrain/sessions/: 047a5ee2-56fe-49ba-977c-c39760d2fa4d.json  05e6a16c-0abf-4350-82a7-228415b3d799.json  1b2212d9-aab6-4f7e-82aa-471f57b78a2b.json  a2288e0b-5fac-4e7b-b358-2ef7a45ef5a6.json  fff7f8a3-7fe9-45c5-85d4-eeab40fa3429.json
.pact/: audit.jsonl  state.json
.pact/archive/add-cli-observability-and-auto-fix-to/: pact.yaml  sops.md  task.md
.pact/archive/session-scope-preflight-rules-via/: TASKS.md  design.json  design.md  pact.yaml  standards.json  tasks.json
.pact/contracts/cli_observability_and_fix/: research.json
.pact/contracts/root/: research.json
contracts/cli_observability_and_fix/: interface.py
contracts/cli_observability_and_fix/history/: 20260402_005611.json
contracts/root/: interface.py
contracts/root/history/: 20260403_205706.json
decomposition/: interview.json  tree.json  type_registry.json
docs/: index.html
hooks/: codex-hooks.json
src/: hook.rs  main.rs  mcp_proxy.rs  mcp_server.rs  policy.rs
tests/: integration_cli.rs  integration_hook.rs
tests/cli_observability_and_fix/: contract_test.py  contract_test_suite.json  emission_test.py
tests/cli_observability_and_fix/goodhart/: goodhart_test.py  goodhart_test_suite.json
